# ishow

./: Cargo.toml  README.md  Rocket.toml
migrations/2021-06-16-043403_create_users/: up.sql
src/: lib.rs  main.rs  routes.rs
src/channels/: channel.rs
src/config/: binance_spot_api_v1.json
src/db/: mod.rs  schema.rs
src/models/: admin.rs  binance.rs  mod.rs  post.rs  user.rs
src/provider/: admin_access_token_provider.rs  admin_provider.rs  last_insert_provider.rs  roots.rs  sessions.rs  users.rs
src/tests/: test_binance.rs
