[package]
name = "v_squad"
version = "0.1.0"
authors = ["chengang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.10"
diesel =  { version = "1.4.7", features = ["postgres"] }
dotenv = "0.15.0"
r2d2-diesel ="1.0"
r2d2 ="0.8"
rocket_contrib = {version="0.4.10", default-features=true, features=["diesel_postgres_pool"]}
serde ="1.0"
serde_json = "*"
serde_derive = "*"
serde_with = {version ="1.4.0", features =["json"]}
reqwest = { version ="0.11", features =["json"]}
tokio = {version ="1", features = ["full"]}
binance = { git = "https://github.com/wisespace-io/binance-rs.git" }

